Checked distribution and getwork randomisation
